<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radio_group_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/techies_string"
            android:drawableLeft="@drawable/techies_small"/>

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/winter_wyvern_string"
            android:drawableLeft="@drawable/winter_wyvern_small"/>

        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/invoker_string"
            android:drawableLeft="@drawable/invoker_small"/>

        <RadioButton
            android:id="@+id/radio_button_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/earth_spirit_string"
            android:drawableLeft="@drawable/earth_spirit_small"/>

        <RadioButton
            android:id="@+id/radio_button_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/templar_assassin_string"
            android:drawableLeft="@drawable/templar_assassin_small"/>
    </RadioGroup>

</LinearLayout>